# web-server-log-analyzer

./: README.md  pyproject.toml
notebooks/: 01_exploracao.ipynb
scripts/: download_data.py
src/: main.py
