[project]
name = "web-server-log-analyzer"
version = "0.1.0"
description = "Regex-based web-log parser for synthetic access logs, route counts, status codes, and hourly traffic."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alberto Mateus P. da Gama" }]

[tool.pytest.ini_options]
pythonpath = ["."]
